--- a/home.css
+++ b/home.css
@@ -296,6 +296,7 @@ body {
     width: 60px; 
     height:60px; 
     background-color: white;
+    color: black;
     border-radius:50%;
     border: none;
     box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.566);
