--- a/home.css
+++ b/home.css
@@ -160,8 +160,9 @@ body {
 
             .leftpic img {
                 position: absolute;
-  top: 0;
-  left: 0;
+                top: 0;
+                left: 0;
+                height: 87% !important;
                 width: auto;
                 height: 100%;
                 object-fit: contain;
@@ -169,9 +170,9 @@ body {
             }
 
             .rightname {
-                flex: 1.2;
+                flex: 1.4;
                 /* min-width: 0; */
-                margin-left: 10px;
+                /* margin-left: 10px; */
                 /* overflow-wrap: break-word;  */
             }
 
@@ -191,6 +192,7 @@ body {
   top: 0;
   left: 0;
   width: 100%;
+  z-index: 2;
   height: 87% !important; /* TODO: 'fix'/solve this problem later*/
   filter: grayscale(100%) brightness(50%);
   clip-path: inset(0 0 0 50%);
