--- a/home.css
+++ b/home.css
@@ -236,13 +236,13 @@ body {
 #nothing_in_cart{
     display: flex;
     justify-self: center;
-    align-content: center;
+    /* align-content: center; */
     
     /* align-self: center; */
     
   /* text-align: center;  */
-  margin: auto;
-    height:100%; 
+  margin-top: 180px;
+    /* height:100%;  */
 }
 
 .cartItems {
