--- a/home.css
+++ b/home.css
@@ -240,8 +240,8 @@ body {
     
     /* align-self: center; */
     
-  /* text-align: center;  */
-  margin-top: 180px;
+  text-align: center; 
+  margin-top: 60%;
     /* height:100%;  */
 }
 
