--- a/home.css
+++ b/home.css
@@ -432,11 +432,12 @@ transition: color 2s; */
             left: 12px;
             /* justify-content: center;
             align-items: center; */
-            /* width: fit-content; */
             /* margin: 15px 0 0 0; */
             /* margin-block: auto; */
             
+            
             gap: 4px;
+            width: 60px;
             height: 24px;
             z-index: 999;
         }
@@ -446,6 +447,7 @@ transition: color 2s; */
             margin: auto;
             /* padding-inline: 3px; */
             height: 14px;
+            /* aspect-ratio: 2.5/1; */
             z-index: 1;
         }
 
@@ -463,11 +465,7 @@ transition: color 2s; */
 
         .switchLanguage{
             display: flex;
-            /* position: absolute; */
             background: white !important;
-            /* float: left; */
-            /* top: 10px;*/
-            /* left: 0px;  */
             height: inherit;
             aspect-ratio: 2.5/1;
             border-radius: 50px;
@@ -475,7 +473,7 @@ transition: color 2s; */
 
         .switchBall{
             height: 100%;
-            aspect-ratio: 1.3/1;
+            width: 50%;
             background: rgb(70, 178, 70);
             border-radius: 50px;
             transition: transform 0.5s ease;
@@ -484,7 +482,7 @@ transition: color 2s; */
         }
 
         .switchBall.changeToSpanish{
-        transform: translateX(92%);
+        transform: translateX(100%);
     }
 
 
