--- a/home.css
+++ b/home.css
@@ -141,44 +141,44 @@ body {
     }
 }
 
-            .cartItemContainter {
-                display: flex;
-                flex-direction: row;
-                position: relative;
-                width: 90%;
-                height: 70px;
-                margin: 15px 10px 0 15px;
-                padding: 0 0 10px 0;
-                border-bottom: 1px solid rgb(134, 134, 134);
-                overflow: hidden; 
-             }
+.cartItemContainter {
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    width: 90%;
+    height: 70px;
+    margin: 15px 10px 0 15px;
+    padding: 0 0 10px 0;
+    border-bottom: 1px solid rgb(134, 134, 134);
+    overflow: hidden; 
+    }
 
 
-            .leftpic {
-                flex: 1;
-            }
+.leftpic {
+    flex: 1;
+}
 
-            .leftpic img {
-                position: absolute;
-                top: 0;
-                left: 0;
-                height: 87% !important;
-                width: auto;
-                height: 100%;
-                object-fit: contain;
-                border-radius: 5px;
-            }
+.leftpic img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 87% !important;
+    width: auto;
+    height: 100%;
+    object-fit: contain;
+    border-radius: 5px;
+}
 
-            .rightname {
-                flex: 1.4;
-                /* min-width: 0; */
-                /* margin-left: 10px; */
-                /* overflow-wrap: break-word;  */
-            }
+.rightname {
+    flex: 1.4;
+    /* min-width: 0; */
+    /* margin-left: 10px; */
+    /* overflow-wrap: break-word;  */
+}
 
-            .rightname p {
-                margin: 0;
-            }
+.rightname p {
+    margin: 0;
+}
 
 .pan_text{
     /* color: #555; */
@@ -199,7 +199,7 @@ body {
 }
 
 #cart_contents_id.open {
-    overflow:visible;
+  overflow: visible;
   height: 50%;
 }
 
@@ -234,13 +234,15 @@ body {
 }
 
 #nothing_in_cart{
-    display: flex;
-    justify-self: center;
+    /* display: flex; */
+    /* justify-self: center; */
     align-content: center;
 
-  /* text-align: center;  */
-  margin-top: 50% auto;
-    height:100%; 
+  text-align: center; 
+  /* overflow: hidden; */
+  /* margin: 50%; */
+  /* width: 200px; */
+    height:100% 
 }
 
 .cartItems {
