--- a/home.css
+++ b/home.css
@@ -223,12 +223,15 @@ body {
     display: block;
     flex: 1; 
     overflow-y: auto;
-    overscroll-behavior: contain;
+    /* overscroll-behavior: contain; */
+    /* overflow: hidden; */
     width: 100%;
     height:90%;
     z-index: 1;
     /* box-shadow: 0 4px 6px -4px rgba(0, 0, 0, 0.3); */
-    box-shadow: 0 14px 16px -4px rgba(0, 0, 0, 0.3);
+    /* box-shadow: -10px 10px 16px 0px rgba(0, 0, 0, 0.3); */
+    
+    box-shadow: -1px 0px 20px rgba(0, 0, 0, 0.3);
     background-color: white;
     /* animation: kf_cart_expand 0.5s; */
 }
@@ -338,7 +341,8 @@ transition: color 2s; */
     /* min-height: fit-content; */
     z-index: 2;
     /* border-top: 1px solid #ccc;   */
-    box-shadow: 0 14px 16px -4px rgba(0, 0, 0, 0.3);
+    /* box-shadow: 0 14px 16px -4px rgba(0, 0, 0, 0.3); */
+    box-shadow: -1px -1px 10px rgba(0, 0, 0, 0.3);
     border-radius: 0 0 0 10px;
     padding: 10px 15px;
     background-color: white;
