--- a/home.css
+++ b/home.css
@@ -305,6 +305,8 @@ body {
     text-align: center;
     transform: rotate(0deg);  
     transition: transform 0.2s ease;
+    padding: 0;
+    margin: 0;
 }
 
 .cirButton.itemWasAdded{
@@ -313,7 +315,8 @@ body {
 }
 
 .plus{
-    height: 70%;
+    height: 40px;
+    width: 40px;
 }
 
 .checkout {
@@ -384,12 +387,12 @@ body {
     /* box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.6); */
 }
 
-.menu-item img {
+.item_image {
     width: 100%;
     border-radius: 60px 0 120px 0;
 }
 
-.menu-item img:hover {
+.item_image:hover {
     cursor: pointer;
 }
 
