--- a/home.css
+++ b/home.css
@@ -120,24 +120,12 @@ body {
     cursor: pointer;
 }
 
-/* @keyframes kf_cart_expand {
-    0% {
-        opacity: 0.5;
-        height: 0%;
-    }
-
-    100% {
-        opacity: 1;
-        height: 90%;
-    }
-} */
-
 .cartItemContainter {
     display: flex;
     flex-direction: row;
     position: relative;
     width: 90%;
-    max-width: 430px ;
+    max-width: 430px;
     height: 100px;
     margin: 15px 10px 0 15px;
     margin-inline: auto;
@@ -192,7 +180,8 @@ body {
   position: fixed;
   top: 53px;
   right: 0;
-  width: 400px;
+  width: 100%;
+  max-width: 430px;
   height: 0;
   max-height: 400px;
   z-index: 2;
@@ -208,21 +197,14 @@ body {
 .cartContent {
     display: flex;
     flex-direction: column;
-    /* flex: 1;  */
-    /* width: 100%; */
+    min-width: 400px;
     height:100%;
     /* height: 400px; */
   position: relative;
   padding-bottom: 68px;
-    /* z-index: 3; */
-  border-radius: 0 0 0 10px;
-    /* box-shadow: 0 4px 6px -4px rgba(0, 0, 0, 0.3); */
-    /* box-shadow: -10px 10px 16px 0px rgba(0, 0, 0, 0.3); */
-    
+  border-radius: 0 0 16px 16px;
     box-shadow: -1px 0px 20px rgba(0, 0, 0, 0.3);
     background-color: white;
-    /* animation: kf_cart_expand 0.5s; */
-
     overflow: hidden;
 }
 
@@ -239,6 +221,7 @@ body {
     bottom: 0;
     left:0;
     right: 0;
+    height: 10%;
     border-radius: inherit;
     padding: 10px 15px;
     background-color: white;
@@ -262,9 +245,7 @@ body {
 }
 
 .cartItems {
-    overflow-y: auto;
-    /* padding-bottom: 70px; */
-}
+    overflow-y: auto;}
 
 .pan_button_div{
     /* display: flex;
@@ -397,66 +378,68 @@ body {
     margin: 0;
     font-size: 24px;
 }
-        .languageContainer{ 
-            position: relative;
-             float: left;
-           /* display: flex; */
-            top: 15px;
-            left: 12px;
-            /* justify-content: center;
-            align-items: center; */
-            /* margin: 15px 0 0 0; */
-            /* margin-block: auto; */
-            
-            
-            gap: 4px;
-            width: 60px;
-            height: 24px;
-            z-index: 999;
-        }
 
-        .languageContainer img{
-            position: absolute;
-            margin: auto;
-            /* padding-inline: 3px; */
-            height: 14px;
-            /* aspect-ratio: 2.5/1; */
-            z-index: 1;
-        }
 
-        .usa{
-            left: 4px;
-            top:23%;
-            border-radius: 3px;
-        }
+.languageContainer{ 
+    position: relative;
+        float: left;
+    /* display: flex; */
+    top: 15px;
+    left: 12px;
+    /* justify-content: center;
+    align-items: center; */
+    /* margin: 15px 0 0 0; */
+    /* margin-block: auto; */
+    
+    
+    gap: 4px;
+    width: 60px;
+    height: 24px;
+    z-index: 999;
+}
 
-        .dr{
-            right: 4px;
-            top:23%;
-            border-radius: 3px;
-        }
+.languageContainer img{
+    position: absolute;
+    margin: auto;
+    /* padding-inline: 3px; */
+    height: 14px;
+    /* aspect-ratio: 2.5/1; */
+    z-index: 1;
+}
 
-        .switchLanguage{
-            display: flex;
-            background: white !important;
-            height: inherit;
-            aspect-ratio: 2.5/1;
-            border-radius: 50px;
-        }
+.usa{
+    left: 4px;
+    top:23%;
+    border-radius: 3px;
+}
 
-        .switchBall{
-            height: 100%;
-            width: 50%;
-            background: rgb(70, 178, 70);
-            border-radius: 50px;
-            transition: transform 0.5s ease;
-            transform: translateX(0);
-            box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.9);
-        }
+.dr{
+    right: 4px;
+    top:23%;
+    border-radius: 3px;
+}
 
-        .switchBall.changeToSpanish{
-        transform: translateX(100%);
-    }
+.switchLanguage{
+    display: flex;
+    background: white !important;
+    height: inherit;
+    aspect-ratio: 2.5/1;
+    border-radius: 50px;
+}
+
+.switchBall{
+    height: 100%;
+    width: 50%;
+    background: rgb(70, 178, 70);
+    border-radius: 50px;
+    transition: transform 0.5s ease;
+    transform: translateX(0);
+    box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.9);
+}
+
+.switchBall.changeToSpanish{
+transform: translateX(100%);
+}
 
 
 .menu-item-content p {
@@ -490,7 +473,9 @@ body {
     right:0;
     bottom: 0;
     width: 90%;
-    height: 650px;
+    height: 90%;
+    min-height: 630px;
+    max-height: 680px;
     max-width: 400px;
     margin: 10px auto;
     background-color: #fffffffc;
@@ -639,6 +624,85 @@ body {
     cursor: pointer;
 }
 
+.save_div{
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+}
+
+#saveContainerId{
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    /* left: 50%; */
+    /* transform: translateX(-50%); */
+    /* width: 80%; */
+     top: inherit;
+  right: inherit;
+  width: 100%;
+  max-width: 432px;
+  height: 0;
+  max-height: 270px;
+    height: 30%;
+    padding-top: 40px;
+    /* padding-top: 162px; */
+    transition: top 0.6s ease;
+    background-color: #b3b3b3;
+    border-radius: 0 0 20px 20px;
+    z-index: 4;
+    /* margin-inline: auto; */
+transform: height 0.6s ease;
+}
+
+#saveContainerId.show {
+    display: flex;
+    /* top: 16px;  */
+    
+}
+
+#cancelMessageButtonId, #saveMessageButtonId{
+    width: 90px;
+    height: 40px;
+    border-radius: 40px;
+    border: none;
+    margin-block: 16px;
+    background-color: #e1968e;
+    cursor: pointer;
+    color: white;
+}
+
+
+#saveMessageButtonId{
+    background-color: #6dac63;
+    /* background-color:rgba(57, 57, 57, 0.545); */
+}
+
+#labelId{
+    text-align: center;
+    margin-block: auto;
+}
+
+#textareaId {
+      width: 80%;
+      height: 150px;
+      padding: 10px;
+      font-size: 16px;
+      max-width: 500px;
+      resize: none;
+      border-radius: 8px;
+    }
+
+#add_message{
+    display: none;
+    cursor: pointer;
+}
+
+#add_message:hover{
+    text-decoration: underline;
+}
+
 #disclaimerTextId{
     text-align: center; 
     margin-block: 40px;
@@ -660,15 +724,10 @@ body {
 
 @media screen and (max-width: 600px) {
 
-    #cart_contents_id {
-    width: 100%;
-
-    }
-
     
-.cartContent {
+/* .cartContent {
   border-radius: 0 0 30px 30px;
-}
+} */
 
 .leftpic {
     flex: 1;
