--- a/home.css
+++ b/home.css
@@ -631,35 +631,31 @@ transform: translateX(100%);
 }
 
 #saveContainerId{
-    display: none;
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     position: fixed;
-    /* left: 50%; */
-    /* transform: translateX(-50%); */
-    /* width: 80%; */
-     top: inherit;
-  right: inherit;
-  width: 100%;
-  max-width: 432px;
-  height: 0;
-  max-height: 270px;
-    height: 30%;
-    padding-top: 40px;
-    /* padding-top: 162px; */
-    transition: top 0.6s ease;
-    background-color: #b3b3b3;
+     top: 54px;
+    right: 0px;
+    width: 100%;
+    max-width: 430px;
+    min-width: 400px;
+    height: 0;
+    max-height: 270px;
+    /* padding-top: 0; */
+    background-color: #9acde5;
+    box-shadow: -1px 0px 20px rgba(0, 0, 0, 0.3);
+    /* background-color: #b3b3b3; */
     border-radius: 0 0 20px 20px;
     z-index: 4;
-    /* margin-inline: auto; */
-transform: height 0.6s ease;
+    transition: height 0.6s ease;
+    overflow: hidden;
 }
 
 #saveContainerId.show {
-    display: flex;
-    /* top: 16px;  */
-    
+    padding-top: 40px;
+     height: 30%;
 }
 
 #cancelMessageButtonId, #saveMessageButtonId{
