--- a/home.css
+++ b/home.css
@@ -644,7 +644,7 @@ transform: translateX(100%);
     height: 0;
     max-height: 270px;
     /* padding-top: 0; */
-    background-color: #9adffc;
+    background-color: #94cbe3;
     box-shadow: -1px 0px 20px rgba(0, 0, 0, 0.3);
     /* background-color: #b3b3b3; */
     border-radius: 0 0 20px 20px;
