--- a/home.css
+++ b/home.css
@@ -87,6 +87,10 @@ body {
     right: 11px;
 }
 
+button::after{
+    background: #6dac63;
+    transition: color 2s ease;
+}
 
 #cart_num_id {
     display: none;
@@ -703,7 +707,9 @@ transform: translateX(100%);
 .disclaimerText{
     text-align: center; 
     margin-block: 40px;
-    margin-inline: 10px;
+    margin-inline: auto;
+    padding-inline: 10px;
+    max-width: 500px;
 }
 
 
